force-app/main/default/objects/Activity/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fellowships</fullName>
            </value>
            <value>
                <fullName>Mentorships</fullName>
            </value>
            <value>
                <fullName>Journal Clubs</fullName>
            </value>
            <value>
                <fullName>Book Program</fullName>
            </value>
            <value>
                <fullName>Grand Rounds</fullName>
            </value>
            <value>
                <fullName>Mini Fellowships</fullName>
            </value>
            <value>
                <fullName>Educational Grants</fullName>
            </value>
            <value>
                <fullName>AI Advisory Groups</fullName>
            </value>
            <value>
                <fullName>Beyond the Exam Room</fullName>
            </value>
            <value>
                <fullName>Fellowship Alumni Program</fullName>
            </value>
            <value>
                <fullName>International Surgeon to Surgeon</fullName>
            </value>
            <value>
                <fullName>Site Visit - Warsaw</fullName>
            </value>
            <value>
                <fullName>Site Visit - Austin</fullName>
            </value>
            <value>
                <fullName>Site Visit -  Parsippany</fullName>
            </value>
            <value>
                <fullName>Z Clinicals to Institution</fullName>
            </value>
            <value>
                <fullName>Z Research to Institution</fullName>
            </value>
            <value>
                <fullName>Z H ealth Economies to Institution</fullName>
            </value>
            <value>
                <fullName>Z Business Segment to Institution</fullName>
            </value>
            <value>
                <fullName>Sawbones</fullName>
            </value>
            <value>
                <fullName>Local cadaveric workshop</fullName>
            </value>
            <value>
                <fullName>Pre/Post ZI session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>