force-app/main/default/objects/Activity/fields/Ammount__c.field-meta.xml
<CustomField>
    <fullName>Ammount__c</fullName>
    <description>Ammount Revenue</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>