force-app/main/default/objects/Activity/fields/Assigned_to_Me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Me__c</fullName>
    <formula>Owner:User.Id ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Me</label>
    <type>Checkbox</type>
</CustomField>