force-app/main/default/objects/Activity/fields/Betreft_maatschap__c.field-meta.xml
<CustomField>
    <fullName>Betreft_maatschap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dit event/taak heeft betrekking op de hele maataschap en niet alleen de contactpersoon die is ingevuld.</description>
    <inlineHelpText>Klik dit veld aan als het event/taak betrekking heeft op de hele maatschap en niet alleen de contactpersoon die is ingevuld.</inlineHelpText>
    <label>Betreft maatschap</label>
    <type>Checkbox</type>
</CustomField>