force-app/main/default/objects/Activity/fields/Competitor_Information__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitor Information</label>
    <type>TextArea</type>
</CustomField>