force-app/main/default/objects/Activity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Front desk</fullName>
            </value>
            <value>
                <fullName>C-Suite</fullName>
            </value>
            <value>
                <fullName>Director of Pharmacy</fullName>
            </value>
            <value>
                <fullName>Office Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>