force-app/main/default/objects/Activity/fields/CreatedByBusinessDivision__c.field-meta.xml
<CustomField>
    <fullName>CreatedByBusinessDivision__c</fullName>
    <description>Pull in the &apos;business division&apos; of the user who created the activity</description>
    <formula>TEXT(CreatedBy.Business_Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByBusinessDivision</label>
    <type>Text</type>
</CustomField>