force-app/main/default/objects/Activity/fields/CreatedByProfileId__c.field-meta.xml
<CustomField>
    <fullName>CreatedByProfileId__c</fullName>
    <description>this looks at the profileid of the person who created an activity . This is used in SOQL query in flow</description>
    <formula>CreatedBy.ProfileId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByProfileId</label>
    <type>Text</type>
</CustomField>