force-app/main/default/objects/Activity/fields/Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Information</label>
    <type>TextArea</type>
</CustomField>