force-app/main/default/objects/Activity/fields/Due_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Due_Days_Remaining__c</fullName>
    <formula>ActivityDate - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>