force-app/main/default/objects/Activity/fields/External_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Activity_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Activity ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>