force-app/main/default/objects/Activity/fields/File_Location__c.field-meta.xml
<CustomField>
    <fullName>File_Location__c</fullName>
    <description>add URL to point to any accessible file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Location</label>
    <type>Url</type>
</CustomField>