force-app/main/default/objects/Activity/fields/I_agree_to_this_CRM_use_policy__c.field-meta.xml
<CustomField>
    <fullName>I_agree_to_this_CRM_use_policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double-click here to accept</label>
    <type>Checkbox</type>
</CustomField>