force-app/main/default/objects/Activity/fields/IcertisCLM__EntityTypeName__c.field-meta.xml
<CustomField>
    <fullName>IcertisCLM__EntityTypeName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entity Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>