force-app/main/default/objects/Activity/fields/IcertisCLM__ICM_Auto_Create_Context__c.field-meta.xml
<CustomField>
    <fullName>IcertisCLM__ICM_Auto_Create_Context__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auto Create Context</label>
    <length>100</length>
    <type>Text</type>
</CustomField>