force-app/main/default/objects/Activity/fields/IcertisCLM__ICM_URL__c.field-meta.xml
<CustomField>
    <fullName>IcertisCLM__ICM_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ICM URL</label>
    <type>Url</type>
</CustomField>