force-app/main/default/objects/Activity/fields/IcertisCLM__Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>IcertisCLM__Instance_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instance Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>