force-app/main/default/objects/Activity/fields/IcertisCLM__SourceEntityName__c.field-meta.xml
<CustomField>
    <fullName>IcertisCLM__SourceEntityName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>