force-app/main/default/objects/Activity/fields/IcertisCLM__TaskSysId__c.field-meta.xml
<CustomField>
    <fullName>IcertisCLM__TaskSysId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>TaskSysId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>