force-app/main/default/objects/Activity/fields/Is_Delegated_Task__c.field-meta.xml
<CustomField>
    <fullName>Is_Delegated_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if a task has been delegated. Set via Field Update workflow</description>
    <label>Is Delegated Task?</label>
    <type>Checkbox</type>
</CustomField>