force-app/main/default/objects/Activity/fields/My_Task__c.field-meta.xml
<CustomField>
    <fullName>My_Task__c</fullName>
    <formula>If( Assigned_to_Me__c,  IMAGE(&quot;/logos/Custom/Circle_Green/logo.png&quot;, &quot;green&quot;, 12,12) , IMAGE(&quot;/logos/Custom/Circle_Grey/logo.png&quot;, &quot;grey&quot;, 12,12)) &amp; &quot;    &quot; &amp; Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
    <label>My Task</label>
    <type>Text</type>
</CustomField>