force-app/main/default/objects/Activity/fields/Near_or_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Near_or_Past_Due__c</fullName>
    <formula>IF(IsClosed,&quot;Closed&quot;,IF(ActivityDate &lt; TODAY(),&quot;Action Needed&quot;,IF(ActivityDate &lt;= TODAY()+7,&quot;Next 7 Days&quot;,IF(ActivityDate &lt;= TODAY()+30,&quot;Next 30 Days&quot;,&quot;&quot; ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Near or Past Due</label>
    <type>Text</type>
</CustomField>