force-app/main/default/objects/Activity/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <label>Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Better Customer connectivity</fullName>
            </value>
            <value>
                <fullName>Produce Interest</fullName>
            </value>
            <value>
                <fullName>Schedule a Meeting</fullName>
            </value>
            <value>
                <fullName>Perform an Inventory</fullName>
            </value>
            <value>
                <fullName>Create an Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>