force-app/main/default/objects/Activity/fields/Other_Related_Information_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Related_Information_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Related Information Details</label>
    <length>30</length>
    <type>Text</type>
</CustomField>