force-app/main/default/objects/Activity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A.T.S</fullName>
            </value>
            <value>
                <fullName>Ades</fullName>
            </value>
            <value>
                <fullName>Alloclassic</fullName>
            </value>
            <value>
                <fullName>Alloclassic Schraubpfanne</fullName>
            </value>
            <value>
                <fullName>Alloclassic SLL</fullName>
            </value>
            <value>
                <fullName>Allofit / Allofit S</fullName>
            </value>
            <value>
                <fullName>Allofit IT</fullName>
            </value>
            <value>
                <fullName>Anatomical Shoulder</fullName>
            </value>
            <value>
                <fullName>Anatomical Shoulder Fraktur</fullName>
            </value>
            <value>
                <fullName>Anatomical Shoulder Inverse/Reverse</fullName>
            </value>
            <value>
                <fullName>Avenir</fullName>
            </value>
            <value>
                <fullName>Bigliani/Flatow</fullName>
            </value>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>Bone Cement</fullName>
            </value>
            <value>
                <fullName>Bone Substitutes</fullName>
            </value>
            <value>
                <fullName>CableReady</fullName>
            </value>
            <value>
                <fullName>Cable System</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>CAS Products</fullName>
            </value>
            <value>
                <fullName>Cement Stop System</fullName>
            </value>
            <value>
                <fullName>Cervical</fullName>
            </value>
            <value>
                <fullName>CLS</fullName>
            </value>
            <value>
                <fullName>CLS Brevius</fullName>
            </value>
            <value>
                <fullName>CMF-T MKG</fullName>
            </value>
            <value>
                <fullName>CMF-T Neuro</fullName>
            </value>
            <value>
                <fullName>CMF-T Pectus</fullName>
            </value>
            <value>
                <fullName>CMF-T Sternum</fullName>
            </value>
            <value>
                <fullName>CMF-T Thoracic</fullName>
            </value>
            <value>
                <fullName>Continuum</fullName>
            </value>
            <value>
                <fullName>Coonrad/Morrey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>