force-app/main/default/objects/Activity/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Integration</description>
    <label>Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Jar Grips</fullName>
            </value>
            <value>
                <fullName>Signature One</fullName>
            </value>
            <value>
                <fullName>VRS</fullName>
            </value>
            <value>
                <fullName>GEL-ONE</fullName>
            </value>
            <value>
                <fullName>VISCO-3</fullName>
            </value>
            <value>
                <fullName>GPS III</fullName>
            </value>
            <value>
                <fullName>AmnioRepair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>