force-app/main/default/objects/Activity/fields/Product_Need__c.field-meta.xml
<CustomField>
    <fullName>Product_Need__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Need</label>
    <type>TextArea</type>
</CustomField>