force-app/main/default/objects/Activity/fields/Related_Information__c.field-meta.xml
<CustomField>
    <fullName>Related_Information__c</fullName>
    <label>Related Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AARP 2008</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Arthritis Today</fullName>
            </value>
            <value>
                <fullName>Back In The Groove 2008</fullName>
            </value>
            <value>
                <fullName>Back In The Groove 2009</fullName>
            </value>
            <value>
                <fullName>Back In The Groove 2010</fullName>
            </value>
            <value>
                <fullName>Back in the Groove 2011</fullName>
            </value>
            <value>
                <fullName>Back In The Groove 2012</fullName>
            </value>
            <value>
                <fullName>Business Week</fullName>
            </value>
            <value>
                <fullName>Commercial/Ad</fullName>
            </value>
            <value>
                <fullName>Community Seminar 2011</fullName>
            </value>
            <value>
                <fullName>Community Seminar 2012</fullName>
            </value>
            <value>
                <fullName>Community Seminars 2009</fullName>
            </value>
            <value>
                <fullName>Community Seminars 2010</fullName>
            </value>
            <value>
                <fullName>GKnee 11/2009</fullName>
            </value>
            <value>
                <fullName>Knee 12/2010</fullName>
            </value>
            <value>
                <fullName>Knee Campaign 1Q 2011</fullName>
            </value>
            <value>
                <fullName>New Story</fullName>
            </value>
            <value>
                <fullName>OBGYN</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Surgeon</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other-N/A</fullName>
            </value>
            <value>
                <fullName>Prevention</fullName>
            </value>
            <value>
                <fullName>Primary Care Physician</fullName>
            </value>
            <value>
                <fullName>PSI Ad 12/2010</fullName>
            </value>
            <value>
                <fullName>PSI Web Banner 12/2010</fullName>
            </value>
            <value>
                <fullName>Recon Campaign Q2 2010</fullName>
            </value>
            <value>
                <fullName>S/N Ad 12/2010</fullName>
            </value>
            <value>
                <fullName>Search Engine</fullName>
            </value>
            <value>
                <fullName>Story/Article</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>