force-app/main/default/objects/Activity/fields/Related_Information_Details__c.field-meta.xml
<CustomField>
    <fullName>Related_Information_Details__c</fullName>
    <label>Related Information Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Related_Information__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Altoona, PA</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Atlanta, GA</fullName>
            </value>
            <value>
                <fullName>Baldwin Hills, CA</fullName>
            </value>
            <value>
                <fullName>Baltimore, MD</fullName>
            </value>
            <value>
                <fullName>Beltway Church of Christ</fullName>
            </value>
            <value>
                <fullName>Coloumbus,OH(3/3/2011)</fullName>
            </value>
            <value>
                <fullName>Discovery Health</fullName>
            </value>
            <value>
                <fullName>Ennis, TX</fullName>
            </value>
            <value>
                <fullName>Fine Living</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Fort Worth, TX</fullName>
            </value>
            <value>
                <fullName>Full Gospel Baptist Fellowship Conference</fullName>
            </value>
            <value>
                <fullName>Hallmark</fullName>
            </value>
            <value>
                <fullName>Hanover, PA</fullName>
            </value>
            <value>
                <fullName>Harlington,TX(1/20/2011)</fullName>
            </value>
            <value>
                <fullName>Hinesville, GA</fullName>
            </value>
            <value>
                <fullName>Indianapolis, IN</fullName>
            </value>
            <value>
                <fullName>Kentucky</fullName>
            </value>
            <value>
                <fullName>Lafayette, IN</fullName>
            </value>
            <value>
                <fullName>Lifetime</fullName>
            </value>
            <value>
                <fullName>Lifetime Movie Network</fullName>
            </value>
            <value>
                <fullName>Memorial Baptist Church</fullName>
            </value>
            <value>
                <fullName>Memphis, TN</fullName>
            </value>
            <value>
                <fullName>Mt. Summit, MI</fullName>
            </value>
            <value>
                <fullName>National Baptist Convention</fullName>
            </value>
            <value>
                <fullName>National Baptist Convention 2008</fullName>
            </value>
            <value>
                <fullName>National Baptist Convention 2009</fullName>
            </value>
            <value>
                <fullName>National Baptist Convention 2010</fullName>
            </value>
            <value>
                <fullName>New York,NY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>