force-app/main/default/objects/Activity/fields/Related_To_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Object__c</fullName>
    <description>Related To Object</description>
    <formula>CASE(
 LEFT(WhatId, 3),
 &quot;&quot;,&quot;&quot;,
 &quot;001&quot;,&quot;Account&quot;,
 &quot;006&quot;,&quot;Opportunity&quot;,
 &quot;500&quot;,&quot;Case&quot;,
 &quot;701&quot;,&quot;Campaign&quot;,
 &quot;800&quot;,&quot;Contract&quot;,
 &quot;01t&quot;,&quot;Product&quot;,
 &quot;a0B&quot;,&quot;Product of Choice&quot;,
 &quot;Other&quot;
)</formula>
    <label>Related To Object</label>
    <type>Text</type>
</CustomField>