force-app/main/default/objects/Activity/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <label>Result</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>no problem customer constant</fullName>
            </value>
            <value>
                <fullName>little problem but solved</fullName>
            </value>
            <value>
                <fullName>urgent problem, must be solved</fullName>
            </value>
            <value>
                <fullName>big problem, solve immedeately</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>