force-app/main/default/objects/Activity/fields/SalesLoft1__SalesLoft_Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__SalesLoft_Cadence_Name__c</fullName>
    <description>The name of the SalesLoft Cadence where the tasks was logged.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SalesLoft Cadence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>