force-app/main/default/objects/Activity/fields/SalesLoft_Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft_Email_Template_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SalesLoft Email Template ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>