force-app/main/default/objects/Activity/fields/SalesLoft_Reply_Count__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft_Reply_Count__c</fullName>
    <label>SalesLoft Reply Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>