force-app/main/default/objects/Activity/fields/SalesLoft_Step_ID__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft_Step_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SalesLoft Step ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>