force-app/main/default/objects/Activity/fields/SalesLoft_Step_Name__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft_Step_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SalesLoft Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>