force-app/main/default/objects/Activity/fields/Staff_Change__c.field-meta.xml
<CustomField>
    <fullName>Staff_Change__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Staff Change</label>
    <type>TextArea</type>
</CustomField>