force-app/main/default/objects/Activity/fields/Target_Segment__c.field-meta.xml
<CustomField>
    <fullName>Target_Segment__c</fullName>
    <label>Target Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_Ortho_Segment</valueSetName>
    </valueSet>
</CustomField>