force-app/main/default/objects/Activity/fields/Task_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Task_Age_Days__c</fullName>
    <label>Task Age (Days)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>