force-app/main/default/objects/Activity/fields/Task_Age_Days_from_creation__c.field-meta.xml
<CustomField>
    <fullName>Task_Age_Days_from_creation__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Age (Days from creation)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>