force-app/main/default/objects/Activity/fields/Task_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Task_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Instructions</label>
    <type>TextArea</type>
</CustomField>