force-app/main/default/objects/Activity/fields/Task_Order__c.field-meta.xml
<CustomField>
    <fullName>Task_Order__c</fullName>
    <label>Task Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>