force-app/main/default/objects/Activity/fields/Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Visit_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visit Notes</label>
    <type>TextArea</type>
</CustomField>