force-app/main/default/objects/Activity/listViews/DE_Meine_Inventuren.listView-meta.xml
<ListView>
    <fullName>DE_Meine_Inventuren</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.STATUS</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>equals</operation>
        <value>Konsignationslager-Inventur 2021</value>
    </filters>
    <label>Meine Inventuren</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Germany</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>